--- a/localization/Strings.properties
+++ b/localization/Strings.properties
@@ -1,6 +1,6 @@
 // User credentials.
-validRegisteredEmail = airas.mangotech@gmail.com
-validPassword = 123456
+validRegisteredEmail = admin@cybermart.com
+validPassword = 12345Ab!
 
 
 // URLs of all the pages.
@@ -20,7 +20,7 @@ urlManageBrands_MarketPlace = https://admin.cybermart.com/market-place/manage-br
 urlManageCategories_MarketPlace = https://admin.cybermart.com/market-place/manage-categories
 urlFeaturedProducts_MarketPlace = https://admin.cybermart.com/market-place/featured-products
 urlOfficeContactInformation_MarketPlace = https://admin.cybermart.com/market-place/office-contact-information
-
+urlMarketPlaceBanner= https://admin.cybermart.com/market-place/manage-banners
 
 // Titles of all the pages.
 titleLoginPage = Login
